--- a/styles.css
+++ b/styles.css
@@ -841,7 +841,7 @@ div.third-column,
 
 .new-content-entry:not(:first-child) {
     border-top: 2px solid #e0e0e0;
-    padding-top: 1.5em;
+    padding-top: 0;
     margin-top: 0;
     position: relative;
 }
@@ -875,7 +875,7 @@ div.third-column,
         rgba(0, 184, 148, 0.01) 50%, 
         transparent 100%);
     border-radius: 4px;
-    padding: 0.5em;
+    padding: 0;
     margin: 0;
 }
 
